--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,68 @@
 .body {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.containerImage {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-left: 10%;
+  box-sizing: border-box;
+}
+
+.containerImage::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.titleImage {
+  color: #ffffff;
+  font-size: 100px;
+  font-weight: 400;
+  width: 800px;
+  z-index: 9;
+}
+
+@media (max-width: 1100px) {
+  .containerImage {
+    padding-left: 0px;
+    padding: 0px 20px;
+  }
+
+  .titleImage {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 820px) {
+  .titleImage {
+    font-size: 80px;
+  }
+}
+
+@media (max-width: 550px) {
+  .titleImage {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 400px) {
+  .titleImage {
+    font-size: 40px;
+  }
 }
