--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -24,10 +24,10 @@
 }
 
 .containerInfo {
-  width: 1200px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  place-items: center;
   padding: 60px 0px;
 }
 
@@ -67,24 +67,23 @@
   text-align: center;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1260px) {
   .containerInfo {
-    width: 100%;
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-content: center;
     gap: 30px;
+  }
+
+  .item {
+    min-width: 300px;
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 675px) {
+  .body {
+    padding: 50px 5px 20px 5px;
+  }
+
   .containerInfo {
-    width: 100%;
-    display: grid;
     grid-template-columns: repeat(1, 1fr);
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
   }
 }
