--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -16,12 +16,23 @@
 }
 
 .item {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   color: #192d2f;
   gap: 20px;
+  background-color: #f5f3f0;
+  padding: 50px 0px;
+  width: 250px;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.item:hover {
+  transform: translateY(-10px) scale(1.05);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .icons {
@@ -75,14 +86,14 @@
   padding: 75px 10px;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1150px) {
   .container {
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .container {
     grid-template-columns: repeat(1, 1fr);
   }
