--- a/src/app/services/services.module.css
+++ b/src/app/services/services.module.css
@@ -54,6 +54,22 @@
   font-size: 40px;
 }
 
+.containerSlider {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #192d2f;
+  padding: 50px 20px;
+}
+
+.containerH1 {
+  width: 700px;
+  text-align: center;
+}
+
 @media (max-width: 1350px) {
   .section {
     padding: 50px 15px;
@@ -93,6 +109,18 @@
 
   .item {
     width: 400px;
+  }
+}
+
+@media (max-width: 720px) {
+  .containerH1 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 30px;
   }
 }
 
