--- a/src/components/servicesList/servicesList.module.css
+++ b/src/components/servicesList/servicesList.module.css
@@ -11,31 +11,20 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  gap: 20px;
+}
+
+.conatinerTitle {
+  width: 450px;
+}
+
+.conatinerDescription {
+  width: 400px;
 }
 
 .image {
   width: 100%;
   height: 350px;
-}
-
-.title {
-  color: #192d2f;
-  font-size: 48px;
-  font-weight: 400;
-  width: 450px;
-  margin-bottom: 30px;
-}
-
-.spanElement {
-  color: #b79e63;
-}
-
-.description {
-  color: #1d2939b8;
-  font-size: 14px;
-  width: 400px;
-  margin-bottom: 30px;
-  line-height: 20px;
 }
 
 .containerRight {
@@ -110,10 +99,6 @@
     height: 450px;
   }
 
-  .title {
-    font-size: 36px;
-  }
-
   .containerRight {
     display: flex;
     flex-direction: column;
@@ -122,13 +107,13 @@
 }
 
 @media (max-width: 640px) {
-  .title {
+  .conatinerTitle {
     width: 100%;
   }
 }
 
 @media (max-width: 440px) {
-  .description {
+  .conatinerDescription {
     width: 100%;
   }
 }
