--- a/src/components/cards/cardServices/cardServices.module.css
+++ b/src/components/cards/cardServices/cardServices.module.css
@@ -10,10 +10,11 @@
   width: 100%;
   height: 450px;
   object-fit: cover;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .sliderImg:hover {
-  scale: 1.05;
+  transform: scale(1.05);
 }
 
 .desc {
