--- a/src/components/cards/cardLawyers/cardLawyers.module.css
+++ b/src/components/cards/cardLawyers/cardLawyers.module.css
@@ -1,4 +1,5 @@
 .cardLawyers {
+  width: 300px;
   position: relative;
   padding-bottom: 75px;
   display: flex;
@@ -13,7 +14,7 @@
 }
 
 .image {
-  width: 300px;
+  width: 100%;
   height: 400px;
   background-size: cover;
   background-position: center;
