--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -6,3 +6,11 @@
   display: flex !important;
   justify-content: center;
 }
+
+.containerLoader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 40px 0px;
+}
