--- a/src/components/heroSection/heroSection.module.css
+++ b/src/components/heroSection/heroSection.module.css
@@ -1,13 +1,14 @@
 .body {
   position: relative;
   width: 100%;
-  height: 75vh;
+  height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-top: 120px;
 }
 
 .body::before {
