--- a/src/app/lawyers/[id]/lawyersProfile.module.css
+++ b/src/app/lawyers/[id]/lawyersProfile.module.css
@@ -74,6 +74,81 @@
   cursor: pointer;
 }
 
+.listSection {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 0px 0px 75px 0px;
+}
+
+.containerList {
+  display: flex;
+  flex-direction: column;
+  width: 1250px;
+}
+
+.itemContainer {
+  border-bottom: 1px solid #192d2f;
+  padding: 30px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.itemList {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #192d2f;
+}
+
+.itemList:hover {
+  color: #b79e63;
+}
+
+.service {
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.serviceDescription {
+  font-size: 14px;
+  color: #1d2939b8;
+  opacity: 0;
+  animation: slideDown 0.5s ease-out forwards;
+}
+
+@keyframes slideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.pagination {
+  position: relative;
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  margin: 30px 0px;
+}
+
+.icon {
+  position: absolute;
+  font-size: 50px;
+  cursor: pointer;
+  color: #192d2f;
+}
+
+.icon:hover {
+  color: #b79e63;
+}
+
 @media (max-width: 1350px) {
   .container {
     gap: 30px;
@@ -89,6 +164,16 @@
 
   .formProfile {
     width: 33%;
+  }
+
+  .listSection {
+    padding: 0px 15px 75px 15px;
+  }
+
+  .containerList {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 }
 
