--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,6 +34,18 @@
   z-index: 9;
 }
 
+.container {
+  width: 100%;
+  background-color: #192d2f;
+  display: flex;
+}
+
+.containerForm {
+  display: flex;
+  justify-content: center;
+  padding: 75px 10px;
+}
+
 @media (max-width: 1100px) {
   .containerImage {
     padding-left: 0px;
