--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -3,3 +3,155 @@
   display: flex;
   flex-direction: column;
 }
+
+.container {
+  width: 100%;
+  display: flex;
+  padding: 50px;
+  gap: 50px;
+}
+
+.conatinerSidebar {
+  width: 300px;
+  max-height: calc(100vh - 200px);
+  background-color: #f5f3f0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.inputContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.inputSearch {
+  padding: 15px;
+  background-color: #ffffff;
+  outline: none;
+  border: none;
+  width: 100%;
+}
+
+.searchIcon {
+  position: absolute;
+  right: 10px;
+  color: #192d2f;
+  font-size: 20px;
+}
+
+.containerCategories {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+
+.titleCategories {
+  color: #192d2f;
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.containerType {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.iconArrow {
+  color: #b79e63;
+  font-size: 20px;
+}
+
+.type {
+  cursor: pointer;
+  color: #192d2f;
+  font-size: 14px;
+}
+
+.type:hover {
+  color: #b79e63;
+}
+
+.aboutUs {
+  color: #1d2939b8;
+  font-size: 14px;
+}
+
+.button {
+  background-color: #b79e63;
+  color: #192d2f;
+  padding: 10px 18px;
+  border: none;
+  width: fit-content;
+  font-size: 14px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-top: 10px;
+}
+
+.iconButton {
+  font-size: 20px;
+}
+
+.button:hover {
+  color: #ffffff;
+  background-color: #192d2f;
+}
+
+.conatinerBlog {
+  width: calc(100% - 300px);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.pagination {
+  position: relative;
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  padding-bottom: 30px;
+}
+
+.icon {
+  position: absolute;
+  font-size: 50px;
+  cursor: pointer;
+  color: #192d2f;
+}
+
+.icon:hover {
+  color: #b79e63;
+}
+
+@media (max-width: 950px) {
+  .container {
+    padding: 50px 20px;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .container {
+    padding: 50px 15px;
+    gap: 20px;
+    flex-direction: column;
+  }
+
+  .conatinerSidebar {
+    width: 100%;
+    position: static;
+  }
+
+  .conatinerBlog {
+    width: 100%;
+    gap: 20px;
+  }
+}
