--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -131,6 +131,21 @@
   color: #b79e63;
 }
 
+.nanElementsContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 50vh;
+}
+
+.titleNanElements {
+  color: #192d2f;
+  font-size: 48px;
+  font-weight: 400;
+}
+
 @media (max-width: 950px) {
   .container {
     padding: 50px 20px;
@@ -141,7 +156,7 @@
 @media (max-width: 800px) {
   .container {
     padding: 50px 15px;
-    gap: 20px;
+    gap: 35px;
     flex-direction: column;
   }
 
@@ -153,5 +168,19 @@
   .conatinerBlog {
     width: 100%;
     gap: 20px;
+  }
+
+  .nanElementsContainer {
+    height: 35vh;
+  }
+
+  .titleNanElements {
+    font-size: 38px;
+  }
+}
+
+@media (max-width: 450px) {
+  .titleNanElements {
+    font-size: 32px;
   }
 }
