--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -33,7 +33,7 @@
 }
 
 .icons {
-  color: #b79e63;
+  color: #cc4643;
   font-size: 50px;
 }
 
@@ -69,7 +69,7 @@
 
 .textInfoWindow {
   margin: 0px;
-  color: #000000;
+  color: #192d2f;
   font-weight: 400;
   font-size: 12px;
 }
