--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #f5f3f0;
 }
 
 .container {
@@ -14,7 +15,7 @@
 .conatinerSidebar {
   width: 300px;
   max-height: calc(100vh - 200px);
-  background-color: #f5f3f0;
+  background-color: #ffffff;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -63,7 +64,7 @@
 }
 
 .iconArrow {
-  color: #b79e63;
+  color: #cc4643;
   font-size: 20px;
 }
 
@@ -74,7 +75,7 @@
 }
 
 .type:hover {
-  color: #b79e63;
+  color: #cc4643;
 }
 
 .aboutUs {
@@ -83,8 +84,8 @@
 }
 
 .button {
-  background-color: #b79e63;
-  color: #192d2f;
+  background-color: #cc4643;
+  color: #ffffff;
   padding: 10px 18px;
   border: none;
   width: fit-content;
@@ -101,7 +102,6 @@
 }
 
 .button:hover {
-  color: #ffffff;
   background-color: #192d2f;
 }
 
@@ -128,7 +128,7 @@
 }
 
 .icon:hover {
-  color: #b79e63;
+  color: #cc4643;
 }
 
 .nanElementsContainer {
