--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,12 +2,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: 120px;
 }
 
 .containerImage {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 120px);
   display: flex;
   align-items: center;
   background-size: cover;
@@ -44,6 +45,7 @@
   display: flex;
   justify-content: center;
   padding: 75px 10px;
+  background-color: #f5f3f0;
 }
 
 @media (max-width: 1100px) {
