--- a/src/components/cards/blogCard/blogCard.module.css
+++ b/src/components/cards/blogCard/blogCard.module.css
@@ -4,18 +4,19 @@
   flex-direction: column;
   padding: 25px;
   gap: 15px;
-  background-color: #f5f3f0;
+  background-color: #ffffff;
   cursor: pointer;
 }
 
 .button {
   cursor: default;
-  background-color: #b79e63;
+  background-color: #cc4643;
   color: #192d2f;
   padding: 7px 14px;
   border: none;
   width: fit-content;
   font-size: 12px;
+  color: #ffffff;
 }
 
 .flexContainer {
@@ -26,7 +27,7 @@
 }
 
 .icon {
-  color: #b79e63;
+  color: #cc4643;
 }
 
 .title {
