--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #2e2e2e;
+  background-color: #ffffff;
   padding: 50px 20px 20px 20px;
 }
 
@@ -14,7 +14,6 @@
 }
 
 .whiteImage {
-  filter: brightness(0) saturate(100%) invert(1);
   height: 40px;
   width: 250px;
 }
@@ -33,7 +32,7 @@
 }
 
 .icons {
-  color: #b79e63;
+  color: #cc4643;
   font-size: 45px;
 }
 
@@ -45,7 +44,7 @@
 
 .text {
   font-size: 18px;
-  color: #ffffff;
+  color: #2e2e2e;
 }
 
 .line {
