--- a/src/components/formContact/formContact.module.css
+++ b/src/components/formContact/formContact.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 50px;
-  background-color: #f5f3f0;
+  background-color: #ffffff;
   text-align: center;
   gap: 40px;
 }
@@ -15,16 +15,16 @@
 
 .formInput {
   width: 50%;
-  background-color: #f5f3f0;
+  background-color: #ffffff;
   outline: none;
   border: none;
-  border-bottom: 1px solid #192d2f;
+  border-bottom: 1px solid #2e2e2e;
   padding-bottom: 12px;
-  color: #192d2f;
+  color: #2e2e2e;
 }
 
 .formInput:focus {
-  border-bottom: 1px solid #b79e63;
+  border-bottom: 1px solid #cc4643;
 }
 
 .containerButton {
@@ -34,15 +34,15 @@
 
 .formButton {
   border: none;
-  background-color: #b79e63;
-  color: #192d2f;
+  background-color: #cc4643;
+  color: #ffffff;
   padding: 15px 0px;
   width: 150px;
   cursor: pointer;
 }
 
 .formButton:hover {
-  background-color: #192d2f;
+  background-color: #2e2e2e;
   color: #ffffff;
 }
 
