--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,12 +6,7 @@
   left: 0px;
   display: flex;
   z-index: 99;
-}
-
-.whiteImage {
-  filter: brightness(0) saturate(100%) invert(1);
-  height: 35px;
-  width: 220px;
+  background-color: #ffffff;
 }
 
 .containerLogo {
@@ -21,6 +16,11 @@
   align-items: center;
   justify-content: center;
   border-right: 1px solid gray;
+}
+
+.logo {
+  height: 35px;
+  width: 220px;
 }
 
 .container {
@@ -49,13 +49,13 @@
 }
 
 .icons {
-  color: #ffffff;
+  color: #2e2e2e;
   font-size: 25px;
   cursor: pointer;
 }
 
 .icons:hover {
-  color: #b79e63;
+  color: #cc4643;
 }
 
 .menu {
@@ -65,7 +65,7 @@
 }
 
 .burgerIcon {
-  color: #ffffff;
+  color: #2e2e2e;
   font-size: 35px;
   cursor: pointer;
 }
@@ -78,7 +78,7 @@
   display: flex;
   flex-direction: column;
   z-index: 99;
-  background-color: #2e2e2e;
+  background-color: #ffffff;
   gap: 20px;
   padding: 50px 30px;
 }
