--- a/src/components/servicesList/servicesList.module.css
+++ b/src/components/servicesList/servicesList.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   padding: 75px 150px;
   gap: 50px;
+  background-color: #f5f3f0;
 }
 
 .containerLeft {
@@ -73,25 +74,6 @@
     opacity: 1;
     transform: translateY(0);
   }
-}
-
-.pagination {
-  position: relative;
-  width: 100%;
-  display: flex;
-  gap: 30px;
-  margin: 30px 0px;
-}
-
-.icon {
-  position: absolute;
-  font-size: 50px;
-  cursor: pointer;
-  color: #192d2f;
-}
-
-.icon:hover {
-  color: #b79e63;
 }
 
 @media (max-width: 1300px) {
