--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -30,6 +30,37 @@
   align-items: center;
 }
 
+.containerOpenLinks {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.opneLinks {
+  background-color: #ffffff;
+  width: 175px;
+  position: absolute;
+  top: 80px;
+  padding: 15px 0px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.textLink {
+  font-size: 16px;
+  width: 140px;
+  padding: 5px 10px;
+}
+
+.textLink:hover {
+  background-color: #cc4643;
+  color: #ffffff;
+}
+
 .containerText {
   display: flex;
   gap: 5px;
@@ -49,7 +80,7 @@
 }
 
 .icons {
-  color: #2e2e2e;
+  color: #192d2f;
   font-size: 25px;
   cursor: pointer;
 }
@@ -65,12 +96,13 @@
 }
 
 .burgerIcon {
-  color: #2e2e2e;
+  color: #192d2f;
   font-size: 35px;
   cursor: pointer;
 }
 
 .containerMenu {
+  height: calc(100vh - 120px);
   width: 100%;
   position: fixed;
   top: 120px;
@@ -103,12 +135,12 @@
   gap: 20px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1330px) {
   .body {
     padding: 0px 20px;
   }
 
-  .whiteImage {
+  .logo {
     height: 40px;
     width: 250px;
   }
@@ -136,7 +168,7 @@
     padding: 0px 10px;
   }
 
-  .whiteImage {
+  .logo {
     height: 32px;
     width: 200px;
   }
@@ -148,12 +180,5 @@
 
   .burgerIcon {
     font-size: 25px;
-  }
-}
-
-@media (max-width: 380px) {
-  .whiteImage {
-    height: 28px;
-    width: 175px;
   }
 }
