--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -50,6 +50,8 @@
   display: flex;
   height: 60vh;
   width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .containerInforWindow {
