--- a/src/app/international/international.module.css
+++ b/src/app/international/international.module.css
@@ -1,3 +1,90 @@
 .body {
   width: 100%;
+  background-color: #f5f3f0;
+}
+
+.container {
+  width: 100%;
+  padding: 50px 0px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.containerFlex {
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  gap: 50px;
+}
+
+.containerLeft {
+  width: 50%;
+  height: 100%;
+  background-image: url("https://grupoioe.es/wp-content/uploads/2018/09/15.Especialidades-de-trabajos-internacionales.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.containerRight {
+  width: 50%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  text-align: left;
+}
+
+@media (max-width: 1200px) {
+  .containerFlex {
+    padding: 30px;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .containerFlex {
+    padding: 20px;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 950px) {
+  .container {
+    padding: 50px 40px;
+  }
+
+  .containerFlex {
+    padding: 40px 0px;
+    gap: 40px;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .containerLeft {
+    width: 400px;
+    height: 400px;
+  }
+
+  .containerRight {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    padding: 50px 15px;
+  }
+
+  .containerLeft {
+    width: 100%;
+    height: 450px;
+  }
 }
