--- a/src/app/lawyers/[id]/lawyersProfile.module.css
+++ b/src/app/lawyers/[id]/lawyersProfile.module.css
@@ -105,6 +105,13 @@
   font-weight: 400;
 }
 
+.serviceTitle {
+  font-size: 14px;
+  color: #192d2f;
+  opacity: 0;
+  animation: slideDown 0.5s ease-out forwards;
+}
+
 .serviceDescription {
   font-size: 14px;
   color: #1d2939b8;
