--- a/src/app/news/blog.module.css
+++ b/src/app/news/blog.module.css
@@ -5,6 +5,14 @@
   background-color: #f5f3f0;
 }
 
+.containerLoader {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -31,7 +39,7 @@
 
 .inputSearch {
   padding: 15px;
-  background-color: #ffffff;
+  background-color: #f5f3f0;
   outline: none;
   border: none;
   width: 100%;
