img admin section

--- a/src/app/admin/login/login.module.css
+++ b/src/app/admin/login/login.module.css
@@ -24,6 +24,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .container {
