--- a/src/app/admin/register/register.module.css
+++ b/src/app/admin/register/register.module.css
@@ -1,7 +1,7 @@
 .body {
   margin-top: 120px;
   width: 100%;
-  height: 95vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,10 +20,12 @@
 .containerImg {
   width: 400px;
   height: 100%;
-  background-image: url("https://technocio.com/wp-content/uploads/2025/02/Herramientas-digitales.jpg");
+  background-image: url("../../../../public/img-register.avif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .container {
