--- a/src/app/admin/login/login.module.css
+++ b/src/app/admin/login/login.module.css
@@ -1,7 +1,7 @@
 .body {
   margin-top: 120px;
   width: 100%;
-  height: 90vh;
+  min-height: calc(100vh - 442.5px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,7 +12,7 @@
 .form {
   border: 1px solid rgba(0, 0, 0, 0.2);
   width: 1000px;
-  height: 100%;
+  height: 600px;
   display: flex;
   border-radius: 10px;
 }
@@ -40,7 +40,7 @@
 .containerInputs {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
 
 .containerElements {
