--- a/src/app/admin/dashboard/dashboard.module.css
+++ b/src/app/admin/dashboard/dashboard.module.css
@@ -1,3 +1,7 @@
-.body{
-    margin-top: 120px;
+.body {
+  margin-top: 120px;
+  height: 43vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
