--- a/src/app/admin/dashboard/dashboard.module.css
+++ b/src/app/admin/dashboard/dashboard.module.css
@@ -1,6 +1,6 @@
 .body {
   margin-top: 120px;
-  height: 43vh;
+  min-height: 45vh;
   display: flex;
   align-items: center;
   justify-content: center;
