--- a/src/app/admin/dashboard/dashboard.module.css
+++ b/src/app/admin/dashboard/dashboard.module.css
@@ -1,7 +1,38 @@
 .body {
   margin-top: 120px;
-  min-height: 45vh;
+  width: 100%;
+  height: calc(100vh - 120px);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: #f5f3f0;
+}
+
+.sideBar {
+  width: 250px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid gray;
+  padding: 20px;
+  gap: 35px;
+}
+
+.text {
+  color: #192d2f;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.text:hover {
+  color: gray;
+}
+
+.container {
+  width: calc(100% - 300px);
+  height: 100%;
+}
+
+@media (max-width: 850px) {
+  .sideBar {
+    display: none;
+  }
 }
