--- a/src/app/admin/resetPassword/resetPassword.module.css
+++ b/src/app/admin/resetPassword/resetPassword.module.css
@@ -62,6 +62,11 @@
 
   .loginInput {
     padding: 10px 14px;
+    height: 45px;
     font-size: 14px;
+  }
+
+  .buttonLogin {
+    font-size: 16px;
   }
 }
