--- a/src/app/admin/dashboard/dashboard.module.css
+++ b/src/app/admin/dashboard/dashboard.module.css
@@ -4,6 +4,7 @@
   height: calc(100vh - 120px);
   display: flex;
   background-color: #f5f3f0;
+  position: relative;
 }
 
 .sideBar {
@@ -16,10 +17,20 @@
   gap: 35px;
 }
 
+.title {
+  color: #192d2f;
+  font-size: 42px;
+  font-weight: 500;
+  border-bottom: 1px solid #000000;
+  width: fit-content;
+  margin-bottom: 15px;
+}
+
 .text {
   color: #192d2f;
   cursor: pointer;
   margin-top: 5px;
+  font-size: 16px;
 }
 
 .text:hover {
@@ -27,12 +38,38 @@
 }
 
 .container {
-  width: calc(100% - 300px);
+  width: calc(100% - 250px);
   height: 100%;
 }
 
+.menu {
+  display: none;
+  position: absolute;
+  top: 10px;
+}
+
+.burgerIcon {
+  color: #192d2f;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 @media (max-width: 850px) {
-  .sideBar {
-    display: none;
+  .menu {
+    display: flex;
+  }
+
+  .container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 38px;
+  }
+
+  .text {
+    font-size: 14px;
   }
 }
