--- a/src/app/admin/dashboard/dashboard.module.css
+++ b/src/app/admin/dashboard/dashboard.module.css
@@ -15,6 +15,7 @@
   border-right: 1px solid gray;
   padding: 20px;
   gap: 35px;
+  background-color: #f5f3f0;
 }
 
 .title {
@@ -45,7 +46,8 @@
 .menu {
   display: none;
   position: absolute;
-  top: 10px;
+  top: 20px;
+  z-index: 99;
 }
 
 .burgerIcon {
@@ -61,6 +63,14 @@
 
   .container {
     width: 100%;
+  }
+
+  .sideBar {
+    width: 250px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 9;
   }
 }
 
