--- a/src/components/admin/profile/profile.module.css
+++ b/src/components/admin/profile/profile.module.css
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 30px;
+  gap: 10px;
 }
 
 .containerInputs {
@@ -35,4 +36,18 @@
   padding: 10px;
   border-radius: 10px;
   background-color: #f5f3f0;
+}
+
+.bodyModal {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 30px 0px;
+}
+
+@media (max-width: 850px) {
+  .container {
+    margin-top: 50px;
+  }
 }
