--- a/src/components/admin/users/updateUser/updateUser.module.css
+++ b/src/components/admin/users/updateUser/updateUser.module.css
@@ -15,6 +15,12 @@
 
 @media (max-width: 850px) {
   .container {
-    margin-top: 50px;
+    margin-top: 90px;
+  }
+}
+
+@media (max-width: 650px) {
+  .body {
+    padding: 20px 5px;
   }
 }
