--- a/src/components/admin/types/updateTypes/updateTypes.module.css
+++ b/src/components/admin/types/updateTypes/updateTypes.module.css
@@ -14,6 +14,14 @@
   margin-top: 0px;
 }
 
+.modalContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0px 20px 0px;
+  gap: 5px;
+}
+
 @media (max-width: 850px) {
   .container {
     margin-top: 90px;
