--- a/src/components/admin/news/createNews/createNews.module.css
+++ b/src/components/admin/news/createNews/createNews.module.css
@@ -1,7 +1,55 @@
 .body {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+
+.form {
+  width: 600px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 20px;
+  gap: 20px;
+}
+
+.containerElements {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.containerButtons {
+  display: flex;
+  gap: 10px;
+}
+
+.select {
+  width: 100%;
+  height: 55px;
+  padding: 12px 20px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  font-size: 22px;
+  color: #192d2f;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+@media (max-width: 650px) {
+  .form {
     width: 100%;
-    height: 100%;
-    padding: 20px;
-    overflow-y: auto;
   }
-  
+
+  .select {
+    padding: 10px 14px;
+    font-size: 16px;
+  }
+}
