--- a/src/components/cards/blogCard/blogCard.module.css
+++ b/src/components/cards/blogCard/blogCard.module.css
@@ -40,10 +40,15 @@
   color: #1d2939b8;
 }
 
-
-@media (max-width: 600px) {
+@media (max-width: 850px) {
   .title {
-    font-size: 36px;
+    font-size: 38px;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 34px;
   }
 
   .desc {
