--- a/src/components/admin/news/updateNews/updateNews.module.css
+++ b/src/components/admin/news/updateNews/updateNews.module.css
@@ -1,6 +1,60 @@
 .body {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-y: auto;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  margin-top: 0px;
+}
+
+.modalContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0px 20px 0px;
+  gap: 20px;
+}
+
+.containerElements {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.select {
+  width: 100%;
+  height: 55px;
+  padding: 12px 20px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  font-size: 22px;
+  color: #192d2f;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+@media (max-width: 850px) {
+  .container {
+    margin-top: 90px;
   }
+}
+
+@media (max-width: 650px) {
+  .body {
+    padding: 20px 5px;
+  }
+
+  .select {
+    padding: 10px 14px;
+    font-size: 16px;
+  }
+}
