--- a/src/components/compnayInfo2/companyInfo2.module.css
+++ b/src/components/compnayInfo2/companyInfo2.module.css
@@ -5,12 +5,12 @@
 }
 
 .containerLeft {
+  height: 75vh;
   width: 50%;
-}
-
-.image {
-  width: 100%;
-  height: 80vh;
+  background-image: url("../../../public/aboutUs-img/Crabog-grupal-serios.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .containerRight {
