--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -73,7 +73,7 @@
 
 .containerIcons {
   height: 100%;
-  width: 33.3%;
+  width: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -135,7 +135,7 @@
   gap: 20px;
 }
 
-@media (max-width: 1330px) {
+@media (max-width: 1500px) {
   .body {
     padding: 0px 20px;
   }
