--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -45,7 +45,7 @@
   display: flex;
   justify-content: center;
   padding: 75px 10px;
-  background-color: #f5f3f0;
+  background-color: #192d2f;
 }
 
 @media (max-width: 1100px) {
