--- a/src/components/cards/cardServices/cardServices.module.css
+++ b/src/components/cards/cardServices/cardServices.module.css
@@ -1,4 +1,5 @@
 .cardServices {
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -9,7 +10,9 @@
 .sliderImg {
   width: 100%;
   height: 450px;
-  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
