--- a/src/app/lawyers/[id]/lawyersProfile.module.css
+++ b/src/app/lawyers/[id]/lawyersProfile.module.css
@@ -26,11 +26,12 @@
 
 .flexContainer {
   display: flex;
+  align-items: center;
   gap: 20px;
   margin-top: 20px;
 }
 
-.icons {
+.iconsStatic {
   color: #cc4643;
   font-size: 22px;
 }
@@ -66,6 +67,10 @@
   padding: 15px 0px;
   width: 150px;
   cursor: pointer;
+}
+
+.formButton:hover {
+  background-color: #cc4643;
 }
 
 .listSection {
@@ -137,14 +142,27 @@
   margin: 20px 0px;
 }
 
-.icon {
-  font-size: 50px;
+.icons {
+  font-size: 22px;
   cursor: pointer;
   color: #192d2f;
 }
 
-.icon:hover {
+.icons:hover {
   color: #cc4643;
+}
+
+.resumeButton {
+  background-color: #cc4643;
+  border: none;
+  color: #ffffff;
+  padding: 8px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.resumeButton:hover {
+  background-color: #192d2f;
 }
 
 @media (max-width: 1350px) {
