--- a/src/app/international/international.module.css
+++ b/src/app/international/international.module.css
@@ -24,7 +24,7 @@
 .containerLeft {
   width: 50%;
   height: 100%;
-  background-image: url("https://grupoioe.es/wp-content/uploads/2018/09/15.Especialidades-de-trabajos-internacionales.jpg");
+  background-image: url("../../../public/international-img/word-img.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
