--- a/src/components/compnayInfo2/companyInfo2.module.css
+++ b/src/components/compnayInfo2/companyInfo2.module.css
@@ -7,7 +7,7 @@
 .containerLeft {
   height: 75vh;
   width: 50%;
-  background-image: url("../../../public/aboutUs-img/Crabog-grupal-serios.jpeg");
+  background-image: url("../../../public/aboutUs-img/Crabog-grupal-serios.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
