--- a/src/app/services/services.module.css
+++ b/src/app/services/services.module.css
@@ -12,18 +12,30 @@
   justify-content: space-between;
   align-items: center;
   background-color: #192d2f;
+  gap: 50px;
 }
 
 .container {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+
+.containerText {
+  display: flex;
   flex-direction: column;
-  gap: 25px;
-  width: 30%;
+  gap: 30px;
+  width: 700px;
 }
 
 .image {
-  max-width: 100%;
-  height: 400px;
+  width: 50%;
+  height: 70vh;
+  background-image: url("../../../public/services-img/libros-img.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .item {
@@ -56,6 +68,10 @@
   .section {
     padding: 50px 15px;
   }
+
+  .containerText {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1000px) {
@@ -63,29 +79,19 @@
     justify-content: center;
     gap: 50px;
   }
-
-  .container {
-    width: 350px;
-  }
-
-  .containerImage {
-    display: none;
-  }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 850px) {
   .section {
     flex-direction: column;
   }
 
   .container {
     width: 100%;
-    align-items: center;
   }
 
-  .containerTitle {
-    width: 400px;
-    text-align: center;
+  .image {
+    width: 100%;
   }
 
   .item {
@@ -106,10 +112,6 @@
 }
 
 @media (max-width: 450px) {
-  .containerTitle {
-    width: 100%;
-  }
-
   .item {
     width: 100%;
   }
