--- a/src/app/international/international.module.css
+++ b/src/app/international/international.module.css
@@ -21,7 +21,7 @@
   gap: 50px;
 }
 
-.containerLeft {
+.containerImg {
   width: 50%;
   height: 100%;
   background-image: url("../../../public/international-img/word-img.webp");
@@ -30,7 +30,7 @@
   background-repeat: no-repeat;
 }
 
-.containerRight {
+.containerText {
   width: 50%;
   min-height: 100%;
   display: flex;
@@ -41,21 +41,7 @@
   text-align: left;
 }
 
-@media (max-width: 1200px) {
-  .containerFlex {
-    padding: 30px;
-    gap: 30px;
-  }
-}
-
-@media (max-width: 1050px) {
-  .containerFlex {
-    padding: 20px;
-    gap: 20px;
-  }
-}
-
-@media (max-width: 950px) {
+@media (max-width: 1400px) {
   .container {
     padding: 50px 40px;
   }
@@ -67,12 +53,13 @@
     height: auto;
   }
 
-  .containerLeft {
-    width: 400px;
-    height: 400px;
+  .containerImg {
+    width: 100%;
+    height: 500px;
+    max-width: 700px;
   }
 
-  .containerRight {
+  .containerText {
     width: 100%;
     height: auto;
   }
@@ -81,10 +68,5 @@
 @media (max-width: 550px) {
   .container {
     padding: 50px 15px;
-  }
-
-  .containerLeft {
-    width: 100%;
-    height: 450px;
   }
 }
