--- a/src/components/formContact/formContact.module.css
+++ b/src/components/formContact/formContact.module.css
@@ -5,6 +5,7 @@
   background-color: #ffffff;
   text-align: center;
   gap: 40px;
+  min-width: 750px;
 }
 
 .containerInput {
@@ -44,6 +45,13 @@
 .formButton:hover {
   background-color: #192d2f;
   color: #ffffff;
+}
+
+@media (max-width: 800px) {
+  .body {
+    width: 100%;
+    min-width: auto;
+  }
 }
 
 @media (max-width: 700px) {
