--- a/src/components/cards/cardLawyers/cardLawyers.module.css
+++ b/src/components/cards/cardLawyers/cardLawyers.module.css
@@ -1,12 +1,12 @@
 .cardLawyers {
   width: 300px;
   position: relative;
-  padding-bottom: 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: transform 0.8s ease, box-shadow 0.8s ease;
   cursor: pointer;
+  background-color: #f0ffff;
 }
 
 .cardLawyers:hover {
@@ -54,7 +54,7 @@
 .containerInfo {
   width: 90%;
   position: absolute;
-  bottom: 40px;
+  bottom: -30px;
   display: flex;
   flex-direction: column;
   gap: 10px;
