--- a/src/components/servicesList/servicesList.module.css
+++ b/src/components/servicesList/servicesList.module.css
@@ -58,6 +58,10 @@
 .serviceDescription {
   font-size: 14px;
   color: #1d2939b8;
+  text-align: justify;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  word-break: break-word;
   opacity: 0;
   animation: slideDown 0.5s ease-out forwards;
 }
