--- a/src/components/cards/cardLawyers/cardLawyers.module.css
+++ b/src/components/cards/cardLawyers/cardLawyers.module.css
@@ -62,3 +62,9 @@
   background-color: #ffffff;
   padding: 20px 50px;
 }
+
+.description{
+  color: #cc4643;
+  font-size: 14px;
+  line-height: 20px;
+}
