--- a/src/components/servicesList/servicesList.module.css
+++ b/src/components/servicesList/servicesList.module.css
@@ -1,6 +1,5 @@
 .body {
   display: flex;
-  align-items: center;
   width: 100%;
   padding: 75px 150px;
   gap: 50px;
@@ -20,7 +19,11 @@
 
 .image {
   width: 100%;
-  height: 350px;
+  height: 450px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../../../public/services-img/serviceListImg.jpg");
 }
 
 .containerRight {
@@ -96,10 +99,6 @@
 
   .containerLeft {
     width: 100%;
-  }
-
-  .image {
-    height: 450px;
   }
 
   .containerRight {
